        #1008).
      Add LINKTYPE_ZBOSS_NCP/DLT_ZBOSS_NCP.
      Add LINKTYPE_USB_2_0_LOW_SPEED/DLT_USB_2_0_LOW_SPEED,
        LINKTYPE_USB_2_0_FULL_SPEED/DLT_USB_2_0_FULL_SPEED,
        LINKTYPE_USB_2_0_HIGH_SPEED/DLT_USB_2_0_HIGH_SPEED
      Add LINKTYPE_AUERSWALD_LOG/DLT_AUERSWALD_LOG.
      Add LINKTYPE_ZWAVE_TAP/DLT_ZWAVE_TAP.
    Packet filtering:
      Add support for Block Ack Req and Block Ack frame types (pull
        request #1039).
      Deprecate pcap_compile_nopcap().
    Savefiles:
      Reject pcap files where one of the reserved fields in the
        "link-layer type plus other stuff" is non-zero.
    rpcap:
      Support user names and passwords in rpcap:// and rpcaps:// URLs.
      Add a -t flag to rpcapd to specify the data channel port; from
        another incorporate-remote-capture project. (issue #1120)
    Documentation:
      Document a standard format for writing out BPF filter programs.
      Document pcap-config better.
    Building and testing:
      Apply GNU Hurd support patch from the Debian package.
      cmake: Update the minimum required version to 2.8.12 (except Windows).
      Makefile.in: Add the releasecheck target.
      Cirrus CI: Add the "make releasecheck" command in the Linux task.
      CI: Introduce and use LIBPCAP_CMAKE_TAINTED.
      CMakeLists.txt: Print "Symlinking: /some/path to ..." conditionally.
      Makefile.in: Add "make -s install" in the releasecheck target.
      Makefile.in: Add the whitespacecheck target.
      Cirrus CI: Run the "make whitespacecheck" command in the Linux task.
      Makefile.in: Add a "touch .devel" command in the releasecheck target.
      autoconf: Add autogen.sh, remove configure and config.h.in and put
        these generated files in the release tarball.

DayOfTheWeek, Month DD, YYYY / The Tcpdump Group
  Summary for 1.10.4 libpcap release (so far!)
    rpcap:
      Fix name of launchd service.
    Documentation: