@@ -1604,6 +1604,11 @@
 #define DLT_ZWAVE_TAP		297
 
 /*
+ * Silicon Labs debug channel protocol:
+ */
+#define DLT_SILABS_DEBUG_CHANNEL 298
+
+/*
  * In case the code that includes this file (directly or indirectly)
  * has also included OS files that happen to define DLT_MATCHING_MAX,
  * with a different value (perhaps because that OS hasn't picked up
@@ -1614,6 +1619,6 @@
 #undef DLT_MATCHING_MAX
 #endif
 
-#define DLT_MATCHING_MAX	297	/* highest value in the "matching" range */
+#define DLT_MATCHING_MAX	298	/* highest value in the "matching" range */
 
 #endif /* !defined(lib_pcap_dlt_h) */
